一応ここまで、サンプルを作成してプッシュ

--- a/sub.html
+++ b/sub.html
@@ -3,8 +3,5 @@
     <head>
         <meta charset="UTF-8">
     </head>
-    <title>サプサイト</title>
-    <body>
-        <h1>サブサイト</h1>
-    </body>
+    <title>サブサイト</title>
 </html>
