--- a/sample.html
+++ b/sample.html
@@ -18,8 +18,13 @@
 
             //レンダラーの作成
             const renderer = new THREE.WebGLRenderer({
-                canvas: document.querySelector("#mycanvas")//ここまで
-            })
+                canvas: document.querySelector("#myCanvas"),
+            });
+
+            renderer.setPixelRatio(window.devicePixelRatio);
+            renderer.setSize(width,height);
+
+            
         </script>
     </head>
     <title>sample site</title>
