--- a/sample.html
+++ b/sample.html
@@ -25,7 +25,7 @@
             renderer.setSize(width,height);
 
             //シーンの作成
-            const scene = new THREE.Sence();
+            const scene = new THREE.Scene();
 
             //カメラの作成
             const camera = new THREE.PerspectiveCamera(45, width / height);
