--- a/sample.html
+++ b/sample.html
@@ -1,52 +1,52 @@
-<!DOCTYPE html>
-<html lang="ja">
-    <head>
-        <meta charset="UTF-8">
-        <script type="importmap">
-             {
-                "imports": {
-                    "three": "https://cdn.jsdelivr.net/npm/three@0.175.0/build/three.module.js"
-                }
-            }   
-        </script>
-        <script type="module">
-            import * as THREE from "three";
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "https://cdn.jsdelivr.net/npm/three@0.175.0/build/three.module.js"
+        }
+      }
+    </script>
+    <script type="module">
+      import * as THREE from "three";
 
-            //サイズの設定
-            const width = 960;
-            const height = 540;
+      // サイズを指定
+      const width = 960;
+      const height = 540;
 
-            //レンダラーの作成
-            const renderer = new THREE.WebGLRenderer({
-                canvas: document.querySelector("#myCanvas"),
-            });
+      // レンダラーを作成
+      const renderer = new THREE.WebGLRenderer({
+        canvas: document.querySelector("#myCanvas"),
+      });
+      renderer.setPixelRatio(window.devicePixelRatio);
+      renderer.setSize(width, height);
 
-            renderer.setPixelRatio(window.devicePixelRatio);
-            renderer.setSize(width,height);
+      // シーンを作成
+      const scene = new THREE.Scene();
 
-            //シーンの作成
-            const scene = new THREE.Scene();
+      // カメラを作成
+      const camera = new THREE.PerspectiveCamera(45, width / height);
+      camera.position.set(0, 0, +1000);
 
-            //カメラの作成
-            const camera = new THREE.PerspectiveCamera(45, width / height);
-            camera.position.set(0,0,+1000);
+      // 箱を作成
+      const geometry = new THREE.BoxGeometry(400, 400, 400);
+      const material = new THREE.MeshNormalMaterial();
+      const box = new THREE.Mesh(geometry, material);
+      scene.add(box);
 
-            const geometry = new THREE.BoxGeometry(100,100,100);
-            const material = new THREE.MeshNormalMaterial();
-            const box = new THREE.Mesh(geometry,material);
-            scene.add(box);
+      tick();
 
-            tick();
-            function tick(){
-                box.rotation.y += 0.01;
-                renderer.render(scene, camera);
-                requestAnimationFrame(tick);
-            }
+      // 毎フレーム時に実行されるループイベントです
+      function tick() {
+        box.rotation.y += 0.01;
+        renderer.render(scene, camera); // レンダリング
 
-        </script>
-    </head>
-    <title>sample site</title>
-    <body>
-        <canvas id="myCanvas"></canvas>
-    </body>
+        requestAnimationFrame(tick);
+      }
+    </script>
+  </head>
+  <body>
+    <canvas id="myCanvas"></canvas>
+  </body>
 </html>
