--- a/sample.html
+++ b/sample.html
@@ -1,6 +1,21 @@
-<html>
+<!DOCTYPE html>
+<html lang="ja">
   <head>
     <meta charset="utf-8" />
+    <title>Three.js Fullscreen</title>
+    <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        height: 100%;
+      }
+      canvas {
+        display: block;
+        width: 100vw;
+        height: 100vh;
+      }
+    </style>
     <script type="importmap">
       {
         "imports": {
@@ -11,37 +26,36 @@
     <script type="module">
       import * as THREE from "three";
 
-      // サイズを指定
-      const width = 960;
-      const height = 540;
+      const width = window.innerWidth;
+      const height = window.innerHeight;
 
-      // レンダラーを作成
       const renderer = new THREE.WebGLRenderer({
         canvas: document.querySelector("#myCanvas"),
       });
       renderer.setPixelRatio(window.devicePixelRatio);
       renderer.setSize(width, height);
 
-      // シーンを作成
       const scene = new THREE.Scene();
-
-      // カメラを作成
       const camera = new THREE.PerspectiveCamera(45, width / height);
-      camera.position.set(0, 0, +1000);
+      camera.position.set(0, 0, 1000);
 
-      // 箱を作成
-      const geometry = new THREE.BoxGeometry(400, 400, 400);
+      const geometry = new THREE.BoxGeometry(200, 200, 200);
       const material = new THREE.MeshNormalMaterial();
       const box = new THREE.Mesh(geometry, material);
       scene.add(box);
 
-      tick();
+      window.addEventListener("resize", () => {
+        const w = window.innerWidth;
+        const h = window.innerHeight;
+        renderer.setSize(w, h);
+        camera.aspect = w / h;
+        camera.updateProjectionMatrix();
+      });
 
-      // 毎フレーム時に実行されるループイベントです
+      tick();
       function tick() {
         box.rotation.y += 0.01;
-        renderer.render(scene, camera); // レンダリング
-
+        renderer.render(scene, camera);
         requestAnimationFrame(tick);
       }
     </script>
