--- a/sample4.html
+++ b/sample4.html
@@ -5,11 +5,11 @@
   <title>spanとidの例</title>
 </head>
 <body>
-  <p>押したキー：<span id="output">（まだ何も）</span></p>
+  <p>押したキー：<span id="moji">（まだ何も）</span></p>
 
   <script>
     document.addEventListener("keydown", (event) => {
-      document.getElementById("output").textContent = event.key;
+      document.getElementById("moji").textContent = event.key;
     });
   </script>
 </body>
