押したに変更

--- a/sample4.html
+++ b/sample4.html
@@ -5,7 +5,7 @@
   <title>spanとidの例</title>
 </head>
 <body>
-  <p>押したキー：<span id="moji">（まだ何も）</span></p>
+  <p>押した：<span id="moji">（まだ何も）</span></p>
 
   <script>
     document.addEventListener("keydown", (event) => {
