数字に変更

--- a/sample2.html
+++ b/sample2.html
@@ -21,13 +21,13 @@
 
     // キーが押されたら
     document.addEventListener("keydown", (event) => {
-      if (event.key === "ArrowUp") {
+      if (event.key === "1") {
         direction = "上";
-      } else if (event.key === "ArrowDown") {
+      } else if (event.key === "2") {
         direction = "下";
-      } else if (event.key === "ArrowLeft") {
+      } else if (event.key === "3") {
         direction = "左";
-      } else if (event.key === "ArrowRight") {
+      } else if (event.key === "4") {
         direction = "右";
       }
 
