--- a/sample1.html
+++ b/sample1.html
@@ -25,6 +25,7 @@
     </script>
     <script type="module">
       import * as THREE from "three";
+      import { GLTFLoader } from "three/examples/jsm/loaders/GLTFLoader.js";//ここまで書いた
 
       const width = window.innerWidth;
       const height = window.innerHeight;
@@ -76,9 +77,3 @@
     <canvas id="myCanvas"></canvas>
   </body>
 </html>
-
-<!--
-HTMLとthree.jsを合成した。その後分離し、canvas=idの部分を全画面サイズwvでジャストに調整。全画面表示化させた
-7/13　手での関数によってカメラの方向が変更している
-7/14　完成したので3Dモデルを表示させるプログラムの方向にシフトしている模様(sample1に)
--->
