--- a/sample1.html
+++ b/sample1.html
@@ -2,78 +2,78 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <title>Three.js Fullscreen</title>
+    <title>3Dモデル表示</title>
     <style>
-      html, body {
+      body {
         margin: 0;
-        padding: 0;
         overflow: hidden;
-        height: 100%;
       }
       canvas {
         display: block;
-        width: 100vw;
-        height: 100vh;
       }
     </style>
     <script type="importmap">
       {
         "imports": {
-          "three": "https://cdn.jsdelivr.net/npm/three@0.175.0/build/three.module.js"
+          "three": "https://cdn.jsdelivr.net/npm/three@0.175.0/build/three.module.js",
+          "three/examples/jsm/loaders/GLTFLoader.js": "https://cdn.jsdelivr.net/npm/three@0.175.0/examples/jsm/loaders/GLTFLoader.js"
         }
       }
     </script>
     <script type="module">
       import * as THREE from "three";
-      import { GLTFLoader } from "three/examples/jsm/loaders/GLTFLoader.js";//ここまで書いた
-
-      const width = window.innerWidth;
-      const height = window.innerHeight;
-
-      const renderer = new THREE.WebGLRenderer({
-        canvas: document.querySelector("#myCanvas"),
-      });
-      renderer.setPixelRatio(window.devicePixelRatio);
-      renderer.setSize(width, height);
+      import { GLTFLoader } from "three/examples/jsm/loaders/GLTFLoader.js";
 
       const scene = new THREE.Scene();
-      const camera = new THREE.PerspectiveCamera(45, width / height);
-      camera.position.set(0, 0, 1000); // 初期位置
+      const camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000);
+      camera.position.set(0, 1, 5);
 
-      const geometry = new THREE.BoxGeometry(200, 200, 200);
-      const material = new THREE.MeshNormalMaterial();
-      const box = new THREE.Mesh(geometry, material);
-      scene.add(box);
+      const renderer = new THREE.WebGLRenderer({ antialias: true });
+      renderer.setSize(window.innerWidth, window.innerHeight);
+      document.body.appendChild(renderer.domElement);
 
-      window.addEventListener("resize", () => {
-        const w = window.innerWidth;
-        const h = window.innerHeight;
-        renderer.setSize(w, h);
-        camera.aspect = w / h;
-        camera.updateProjectionMatrix();
-      });
+      // 光源
+      const light = new THREE.DirectionalLight(0xffffff, 1);
+      light.position.set(1, 1, 1);
+      scene.add(light);
 
-      // キー入力でカメラの位置を変える
+      // 3Dモデル用の変数
+      let duck = null;
+
+      // モデル読み込み
+      const loader = new GLTFLoader();
+      loader.load(
+        'https://cdn.jsdelivr.net/gh/KhronosGroup/glTF-Sample-Models/2.0/Duck/glTF-Binary/Duck.glb',
+        function (gltf) {
+          duck = gltf.scene;
+          scene.add(duck);
+          tick(); // 読み込み完了後にアニメーション開始
+        },
+        undefined,
+        function (error) {
+          console.error("モデルの読み込みに失敗:", error);
+        }
+      );
+
+      // カメラ移動（キー操作）
       document.addEventListener("keydown", (event) => {
         if (event.key === "1") {
-          camera.position.set(0, 0, 500);
+          camera.position.set(0, 0, 5);
           console.log("現在の方向: 正面");
         } else if (event.key === "2") {
-          camera.position.set(0, 0, 1000);
-          console.log("現在の方向: テキトー");
+          camera.position.set(2, 2, 5);
+          console.log("現在の方向: 斜め");
         }
       });
 
       function tick() {
-        box.rotation.y += 0.01;
-        renderer.render(scene, camera);
         requestAnimationFrame(tick);
+        if (duck) {
+          duck.rotation.y += 0.01; // アニメーション
+        }
+        renderer.render(scene, camera);
       }
-
-      tick();
     </script>
   </head>
-  <body>
-    <canvas id="myCanvas"></canvas>
-  </body>
+  <body></body>
 </html>
