リサーチモデルに変更

--- a/application schedule/sub.html
+++ b/application schedule/sub.html
@@ -43,7 +43,7 @@
       // モデル読み込み
       const loader = new GLTFLoader();
       loader.load(
-        'https://cdn.jsdelivr.net/gh/KhronosGroup/glTF-Sample-Models/2.0/Duck/glTF-Binary/Duck.glb',
+        'https://dondenden.github.io/sample-education-system/application%20schedule/Research Models.glb',
         function (gltf) {
           duck = gltf.scene;
           scene.add(duck);
