--- a/application schedule/main.html
+++ b/application schedule/main.html
@@ -1,20 +1,41 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <head>
-        <meta charset="UTF-8">
-    </head>
+<head>
+    <meta charset="UTF-8">
     <title>教育支援用プラットフォーム</title>
     <style>
         body {
-            background-color: rgb(58, 166, 166) ;
+            background-color: rgb(58, 166, 166);
             text-align: center;
         }
-        h1 { color: white;}
+
+        h1 {
+            color: white;
+        }
+
+        a.btn--yellow {
+            display: inline-block;
+            padding: 10px 20px;
+            font-weight: bold;
+            text-decoration: none;
+            color: #000;
+            background-color: #fff100;
+            border-bottom: 5px solid #ccc100;
+            border-radius: 6px;
+        }
+
+        a.btn--yellow:hover {
+            margin-top: 3px;
+            background: #fff20a;
+            border-bottom: 2px solid #ccc100;
+        }
     </style>
-    <div class="box"></div>
-    <body>
-        <div class="main-theme">
-            <h1>メインプラットフォーム </h1>
-        </div>
-    </body>
+</head>
+<body>
+    <div class="main-theme">
+        <h1>メインプラットフォーム</h1>
+    </div>
+
+    <a href="your-link.html" class="btn btn--yellow">3DモデルへGO!</a>
+</body>
 </html>
