3Dモデルのとこまで完成

--- a/application schedule/main.html
+++ b/application schedule/main.html
@@ -36,6 +36,6 @@
         <h1>メインプラットフォーム</h1>
     </div>
 
-    <a href="your-link.html" class="btn btn--yellow">3DモデルへGO!</a>
+    <a href="https://dondenden.github.io/sample-education-system/application%20schedule/sub" class="btn btn--yellow">3DモデルへGO!</a>
 </body>
 </html>
