--- a/application schedule/sub.html
+++ b/application schedule/sub.html
@@ -65,6 +65,10 @@
           camera.position.set(0,6.5,5);
           camera.lookAt(0,0,0);
           console.log("現在の方向: 上45");
+        } else if (event.key === "3") {
+          camera.position.set(0,-3.5,5);
+          camera.lookAt(0,0,0);
+          console.log("現在の方向: 下")
         }
       });
 
