エラー対処（SDKの追加）

--- a/anther faile/sample/index.html
+++ b/anther faile/sample/index.html
@@ -12,6 +12,9 @@
         display: block;
       }
     </style>
+    <!-- firebaseのsdk追加 -->
+    <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-database-compat.js"></script>
     <script>
         //firebase設定
         const firebaseConfig = {
