--- a/anther faile/sample/index.html
+++ b/anther faile/sample/index.html
@@ -16,17 +16,17 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-database-compat.js"></script>
     <script>
-        //firebase設定
-        const firebaseConfig = {
-            apiKey: "AIzaSyBFXUDC3U2glx7UbkyigIYxGkSw9qhlYMU",
-            authDomain: "realtimesyncapp-3e1d6.firebaseapp.com",
-            databaseURL: "https://realtimesyncapp-3e1d6-default-rtdb.firebaseio.com",
-            projectId: "realtimesyncapp-3e1d6",
-            storageBucket: "realtimesyncapp-3e1d6.firebasestorage.app",
-            messagingSenderId: "584295413541",
-            appId: "1:584295413541:web:20a5ae6fcb742cf09d0ccc",
-            measurementId: "G-5YNKMHK2NY"
-        };
+      //firebase設定
+      const firebaseConfig = {
+        apiKey: "AIzaSyBFXUDC3U2glx7UbkyigIYxGkSw9qhlYMU",
+        authDomain: "realtimesyncapp-3e1d6.firebaseapp.com",
+        databaseURL: "https://realtimesyncapp-3e1d6-default-rtdb.firebaseio.com",
+        projectId: "realtimesyncapp-3e1d6",
+        storageBucket: "realtimesyncapp-3e1d6.appspot.com",
+        messagingSenderId: "584295413541",
+        appId: "1:584295413541:web:20a5ae6fcb742cf09d0ccc",
+        measurementId: "G-5YNKMHK2NY"
+      };
     </script>
     <script type="importmap">
       {
@@ -48,22 +48,19 @@
       renderer.setSize(window.innerWidth, window.innerHeight);
       document.body.appendChild(renderer.domElement);
 
-      // 光源
       const light = new THREE.DirectionalLight(0xffffff, 2);
-      light.position.set(0,2,1);
+      light.position.set(0, 2, 1);
       scene.add(light);
 
-      // 3Dモデル用の変数
-      let duck = null;
+      let model = null;
 
-      // モデル読み込み
       const loader = new GLTFLoader();
       loader.load(
         'https://dondenden.github.io/sample-education-system/application%20schedule/Research Models.glb',
         function (gltf) {
-          duck = gltf.scene;
-          scene.add(duck);
-          tick(); // 読み込み完了後にアニメーション開始
+          model = gltf.scene;
+          scene.add(model);
+          tick(); // アニメーション開始
         },
         undefined,
         function (error) {
@@ -71,50 +68,65 @@
         }
       );
 
-      //firebase初期化
       firebase.initializeApp(firebaseConfig);
       const db = firebase.database();
 
-      //入力したキーを送信
+      const connectionID = Math.random().toString(36).substring(2);
+      console.log("ID:", connectionID);
+
+      db.ref("user/" + connectionID).set({
+        camera: {
+          position: { x: 0, y: 1.5, z: 5 },
+          lookAt: { x: 0, y: 0, z: 0 }
+        }
+      });
+
+      db.ref("user").on("value", (snapshot) => {
+        const user = snapshot.val();
+        for (const id in user) {
+          if (id === connectionID) continue;
+          const userCam = user[id].camera;
+          // 他ユーザーのカメラ状態取得（必要に応じて使用）
+        }
+      });
+
       document.addEventListener("keydown", (event) => {
         db.ref("camerakey").set(event.key);
       });
 
-      //受信
-      db.ref("camerakey").on("value",(snapshot)=>{
+      db.ref("camerakey").on("value", (snapshot) => {
         const key = snapshot.val();
         if (key === "1") {
           camera.position.set(0, 1.5, 5);
-          camera.lookAt(0,1.5,5);
+          camera.lookAt(0, 1.5, 5);
         } else if (key === "2") {
-          camera.position.set(0,6.5,5);
-          camera.lookAt(0,0,0);
-        } else if(key === "3") {
-          camera.position.set(0,-2.5,5);
-          camera.lookAt(0,0,0);
-        } else if(key === "4") {
-          camera.position.set(4,5,4);
-          camera.lookAt(0,0,0);
+          camera.position.set(0, 6.5, 5);
+          camera.lookAt(0, 0, 0);
+        } else if (key === "3") {
+          camera.position.set(0, -2.5, 5);
+          camera.lookAt(0, 0, 0);
+        } else if (key === "4") {
+          camera.position.set(4, 5, 4);
+          camera.lookAt(0, 0, 0);
         }
       });
 
-      // カメラ移動（キー操作）
       document.addEventListener("keydown", (event) => {
         if (event.key === "1") {
           camera.position.set(0, 1.5, 5);
-          camera.lookAt(0,1.5,5);
+          camera.lookAt(0, 1.5, 5);
           console.log("現在の方向: 正面");
         } else if (event.key === "2") {
-          camera.position.set(0,6.5,5);
-          camera.lookAt(0,0,0);
+          camera.position.set(0, 6.5, 5);
+          camera.lookAt(0, 0, 0);
           console.log("現在の方向: 上45");
-        } else if(event.key === "3") {
-          camera.position.set(0,-2.5,5);
-          camera.lookAt(0,0,0);
+        } else if (event.key === "3") {
+          camera.position.set(0, -2.5, 5);
+          camera.lookAt(0, 0, 0);
           console.log("現在の方向: 下45度");
-        } else if(event.key === "4") {
-          camera.position.set(4,5,4);
-          camera.lookAt(0,0,0);
+        } else if (event.key === "4") {
+          camera.position.set(4, 5, 4);
+          camera.lookAt(0, 0, 0);
           console.log("現在の方向: 右45度");
         }
       });
@@ -123,6 +135,8 @@
         requestAnimationFrame(tick);
         renderer.render(scene, camera);
       }
+
+      db.ref("user/" + connectionID).onDisconnect().remove();
     </script>
   </head>
   <body></body>
