--- a/anther faile/sample/index.html
+++ b/anther faile/sample/index.html
@@ -1,143 +1,96 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="utf-8" />
-    <title>3Dモデル表示</title>
-    <style>
-      body {
-        margin: 0;
-        overflow: hidden;
-      }
-      canvas {
-        display: block;
-      }
-    </style>
-    <!-- firebaseのsdk追加 -->
-    <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-database-compat.js"></script>
-    <script>
-      //firebase設定
-      const firebaseConfig = {
-        apiKey: "AIzaSyBFXUDC3U2glx7UbkyigIYxGkSw9qhlYMU",
-        authDomain: "realtimesyncapp-3e1d6.firebaseapp.com",
-        databaseURL: "https://realtimesyncapp-3e1d6-default-rtdb.firebaseio.com",
-        projectId: "realtimesyncapp-3e1d6",
-        storageBucket: "realtimesyncapp-3e1d6.appspot.com",
-        messagingSenderId: "584295413541",
-        appId: "1:584295413541:web:20a5ae6fcb742cf09d0ccc",
-        measurementId: "G-5YNKMHK2NY"
-      };
-    </script>
-    <script type="importmap">
-      {
-        "imports": {
-          "three": "https://cdn.jsdelivr.net/npm/three@0.175.0/build/three.module.js",
-          "three/examples/jsm/loaders/GLTFLoader.js": "https://cdn.jsdelivr.net/npm/three@0.175.0/examples/jsm/loaders/GLTFLoader.js"
-        }
-      }
-    </script>
-    <script type="module">
-      import * as THREE from "three";
-      import { GLTFLoader } from "three/examples/jsm/loaders/GLTFLoader.js";
+<head>
+  <meta charset="UTF-8" />
+  <title>3Dモデル同期表示</title>
+  <style>
+    body { margin: 0; overflow: hidden; }
+    canvas { display: block; }
+  </style>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.136.0/build/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.136.0/examples/js/loaders/GLTFLoader.js"></script>
+</head>
+<body>
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyCez6U4jA9cbYy9Ep3q3MJwzY9Bnbhmbug",
+    authDomain: "cursor-5b8b6.firebaseapp.com",
+    databaseURL: "https://cursor-5b8b6-default-rtdb.firebaseio.com",
+    projectId: "cursor-5b8b6",
+    storageBucket: "cursor-5b8b6.appspot.com",
+    messagingSenderId: "198087571801",
+    appId: "1:198087571801:web:4c35cb0e8f3b95672d51c0"
+  };
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.database();
 
-      const scene = new THREE.Scene();
-      const camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000);
+  const urlParams = new URLSearchParams(window.location.search);
+  const roomID = urlParams.get("room") || "defaultRoom";
+  const connectionID = Math.random().toString(36).substring(2);
+
+  const scene = new THREE.Scene();
+  const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+  const renderer = new THREE.WebGLRenderer();
+  renderer.setSize(window.innerWidth, window.innerHeight);
+  document.body.appendChild(renderer.domElement);
+
+  const light = new THREE.AmbientLight(0xffffff, 1);
+  scene.add(light);
+
+  const loader = new THREE.GLTFLoader();
+  loader.load("scene.glb", (gltf) => {
+    scene.add(gltf.scene);
+  });
+
+  camera.position.set(0, 1.5, 5);
+  camera.lookAt(0, 0, 0);
+
+  // カメラ移動（キー操作）
+  document.addEventListener("keydown", (event) => {
+    if (event.key === "1") {
       camera.position.set(0, 1.5, 5);
+      camera.lookAt(0,0,0);
+      console.log("現在の方向: 正面");
+    } else if (event.key === "2") {
+      camera.position.set(0,6.5,5);
+      camera.lookAt(0,0,0);
+      console.log("現在の方向: 上");
+    } else if (event.key === "3") {
+      camera.position.set(0,-3.5,5);
+      camera.lookAt(0,0,0);
+      console.log("現在の方向: 下");
+    }
 
-      const renderer = new THREE.WebGLRenderer({ antialias: true });
-      renderer.setSize(window.innerWidth, window.innerHeight);
-      document.body.appendChild(renderer.domElement);
-
-      const light = new THREE.DirectionalLight(0xffffff, 2);
-      light.position.set(0, 2, 1);
-      scene.add(light);
-
-      let model = null;
-
-      const loader = new GLTFLoader();
-      loader.load(
-        'https://dondenden.github.io/sample-education-system/application%20schedule/Research Models.glb',
-        function (gltf) {
-          model = gltf.scene;
-          scene.add(model);
-          tick(); // アニメーション開始
+    db.ref(`user/${roomID}/${connectionID}`).set({
+      camera: {
+        position: {
+          x: camera.position.x,
+          y: camera.position.y,
+          z: camera.position.z
         },
-        undefined,
-        function (error) {
-          console.error("モデルの読み込みに失敗:", error);
-        }
-      );
-
-      firebase.initializeApp(firebaseConfig);
-      const db = firebase.database();
-
-      const connectionID = Math.random().toString(36).substring(2);
-      console.log("ID:", connectionID);
-
-      db.ref("user/" + connectionID).set({
-        camera: {
-          position: { x: 0, y: 1.5, z: 5 },
-          lookAt: { x: 0, y: 0, z: 0 }
-        }
-      });
-
-      db.ref("user").on("value", (snapshot) => {
-        const user = snapshot.val();
-        for (const id in user) {
-          if (id === connectionID) continue;
-          const userCam = user[id].camera;
-          // 他ユーザーのカメラ状態取得（必要に応じて使用）
-        }
-      });
-
-      document.addEventListener("keydown", (event) => {
-        db.ref("camerakey").set(event.key);
-      });
-
-      db.ref("camerakey").on("value", (snapshot) => {
-        const key = snapshot.val();
-        if (key === "1") {
-          camera.position.set(0, 1.5, 5);
-          camera.lookAt(0, 1.5, 5);
-        } else if (key === "2") {
-          camera.position.set(0, 6.5, 5);
-          camera.lookAt(0, 0, 0);
-        } else if (key === "3") {
-          camera.position.set(0, -2.5, 5);
-          camera.lookAt(0, 0, 0);
-        } else if (key === "4") {
-          camera.position.set(4, 5, 4);
-          camera.lookAt(0, 0, 0);
-        }
-      });
-
-      document.addEventListener("keydown", (event) => {
-        if (event.key === "1") {
-          camera.position.set(0, 1.5, 5);
-          camera.lookAt(0, 1.5, 5);
-          console.log("現在の方向: 正面");
-        } else if (event.key === "2") {
-          camera.position.set(0, 6.5, 5);
-          camera.lookAt(0, 0, 0);
-          console.log("現在の方向: 上45");
-        } else if (event.key === "3") {
-          camera.position.set(0, -2.5, 5);
-          camera.lookAt(0, 0, 0);
-          console.log("現在の方向: 下45度");
-        } else if (event.key === "4") {
-          camera.position.set(4, 5, 4);
-          camera.lookAt(0, 0, 0);
-          console.log("現在の方向: 右45度");
-        }
-      });
-
-      function tick() {
-        requestAnimationFrame(tick);
-        renderer.render(scene, camera);
+        lookAt: { x: 0, y: 0, z: 0 }
       }
+    });
+  });
 
-      db.ref("user/" + connectionID).onDisconnect().remove();
-    </script>
-  </head>
-  <body></body>
+  db.ref(`user/${roomID}`).on("value", (snapshot) => {
+    const users = snapshot.val();
+    for (const id in users) {
+      if (id === connectionID) continue;
+      const userCam = users[id].camera;
+      console.log(`他ユーザー[${id}] のカメラ位置:`, userCam.position);
+    }
+  });
+
+  db.ref(`user/${roomID}/${connectionID}`).onDisconnect().remove();
+
+  function animate() {
+    requestAnimationFrame(animate);
+    renderer.render(scene, camera);
+  }
+  animate();
+</script>
+</body>
 </html>
