--- a/anther faile/sample/index.html
+++ b/anther faile/sample/index.html
@@ -161,6 +161,7 @@
       });
 
       db.ref(`user/${roomID}/${connectionID}`).onDisconnect().remove();
+      db.ref(`camerakey/${roomID}`).onDisconnect().remove();
     </script>
   </head>
   <body>
