ボタンの追加

--- a/anther faile/sample/main.html
+++ b/anther faile/sample/main.html
@@ -18,5 +18,7 @@
     <div class="main-theme">
         <h1>メインプラットフォーム</h1>
     </div>
+    <button>メイン</button>
+    <button>サブ</button>
 </body>
 </html>
