--- a/anther faile/sample/main.html
+++ b/anther faile/sample/main.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>教育支援用プラットフォーム</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <style>
         body {
             background-color: rgb(58, 166, 166);
@@ -12,13 +13,120 @@
         h1 {
             color: white;
         }
+
+        *,
+        *:before,
+        *:after {
+            box-sizing: inherit;
+        }
+        html {
+            box-sizing: border-box;
+            font-size: 62.5%;
+        }
+        .btn,
+        a.btn,
+        button.btn {
+            font-size: 1.6rem;
+            font-weight: 700;
+            line-height: 1.5;
+            position: relative;
+            display: inline-block;
+            padding: 1rem 4rem;
+            cursor: pointer;
+            user-select: none;
+            transition: all 0.3s;
+            text-align: center;
+            vertical-align: middle;
+            text-decoration: none;
+            letter-spacing: 0.1em;
+            color: #212529;
+            border-radius: 0.5rem;
+        }
+
+        a.btn-custom01 {
+            margin-bottom: 0.5rem;
+            padding: 0;
+            border-radius: 0.75rem;
+        }
+
+        a.btn-custom01:before {
+            position: absolute;
+            top: 0; right: 0; bottom: 0; left: 0;
+            width: 100%; height: 100%;
+            content: "";
+            transition: all 0.3s;
+            transform: translate3d(0, 0.75rem, -1rem);
+            border: 2px solid #000;
+            border-radius: inherit;
+            background: #ccc100;
+            box-shadow: 0 0.6rem 0 0 rgba(0, 0, 0, 0.2);
+        }
+
+        a.btn-custom01:after {
+            font-family: "Font Awesome 5 Free";
+            font-size: 2rem;
+            position: absolute;
+            top: calc(50% - 1rem);
+            left: 1.5rem;
+            content: "\f0e0";
+        }
+
+        .btn-custom01-front {
+            position: relative;
+            display: block;
+            padding: 1.5rem 5rem;
+            transition: all 0.3s;
+            border: 2px solid #000;
+            border-radius: inherit;
+            background: #fff100;
+        }
+
+        .fa-position-right {
+            position: absolute;
+            top: calc(50% - 0.5em);
+            right: 1rem;
+        }
+
+        a.btn-custom01:hover {
+            transform: translate(0, 0.25rem);
+        }
+
+        a.btn-custom01:hover:before {
+            transform: translate3d(0, 0.5rem, -1rem);
+            box-shadow: 0 0.35rem 0 0 rgba(0, 0, 0, 0.2);
+        }
+
+        a.btn-custom01:hover:after {
+            content: "\f2b6";
+        }
+
+        a.btn-custom01:active {
+            transform: translate(0rem, 0.75rem);
+        }
+
+        a.btn-custom01:active:before {
+            transform: translate3d(0, 0, -1rem);
+            box-shadow: 0 0.35rem 0 0 rgba(0, 0, 0, 0.2);
+        }
+
+        a.btn-custom01:active:after {
+            content: "\f2b6";
+        }
     </style>
 </head>
 <body>
     <div class="main-theme">
         <h1>メインプラットフォーム</h1>
     </div>
-    <button>メイン</button>
-    <button>サブ</button>
+    <a class="btn btn-custom01">
+        <span class="btn-custom01-front">PUSH</span>
+        <i class="fas fa-angle-right fa-position-right"></i>
+    </a>
+
+    <script>
+      document.querySelector('.btn-custom01').addEventListener('click', () => {
+        alert('ボタンがクリックされました！');
+      });
+    </script>
 </body>
 </html>
