--- a/anther faile/sample/main.html
+++ b/anther faile/sample/main.html
@@ -118,13 +118,13 @@
     <div class="main-theme">
         <h1>メインプラットフォーム</h1>
     </div>
-    <a class="btn btn-custom01">
+    <a class="btm youer">
         <span class="btn-custom01-front">PUSH</span>
         <i class="fas fa-angle-right fa-position-right"></i>
     </a>
 
     <script>
-      document.querySelector('.btn-custom01').addEventListener('click', () => {
+      document.querySelector('btm youer').addEventListener('click', () => {
         alert('ボタンがクリックされました！');
       });
     </script>
