--- a/anther faile/sample/main.html
+++ b/anther faile/sample/main.html
@@ -12,6 +12,23 @@
         h1 {
             color: white;
         }
+
+        a.btn--yellow {
+            display: inline-block;
+            padding: 10px 20px;
+            font-weight: bold;
+            text-decoration: none;
+            color: #000;
+            background-color: #fff100;
+            border-bottom: 5px solid #ccc100;
+            border-radius: 6px;
+        }
+
+        a.btn--yellow:hover {
+            margin-top: 3px;
+            background: #fff20a;
+            border-bottom: 2px solid #ccc100;
+        }
     </style>
 </head>
 <body>
