--- a/anther faile/sample/main.html
+++ b/anther faile/sample/main.html
@@ -13,21 +13,22 @@
             color: white;
         }
 
-        a.btn--yellow {
-            display: inline-block;
-            padding: 10px 20px;
-            font-weight: bold;
-            text-decoration: none;
-            color: #000;
-            background-color: #fff100;
-            border-bottom: 5px solid #ccc100;
-            border-radius: 6px;
+        a.btn-solid {
+            color: #fff;
+            border-top: 4px solid #48ecc4;
+            border-right: 4px solid #0a5f4a;
+            border-bottom: 4px solid #0f745b;
+            border-left: 4px solid #8cf9de;
+            border-radius: 0;
+            background: #11a37f;
         }
-
-        a.btn--yellow:hover {
-            margin-top: 3px;
-            background: #fff20a;
-            border-bottom: 2px solid #ccc100;
+        
+        a.btn-solid:hover {
+            color: #fff;
+            border-top: 4px solid #0f745b;
+            border-right: 4px solid #8cf9de;
+            border-bottom: 4px solid #48ecc4;
+            border-left: 4px solid #0a5f4a;
         }
     </style>
 </head>
