--- a/anther faile/sample/main.html
+++ b/anther faile/sample/main.html
@@ -1,43 +1,55 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <title>教育支援用プラットフォーム</title>
-    <style>
-        body {
-            background-color: rgb(58, 166, 166);
-            text-align: center;
-        }
+  <meta charset="UTF-8">
+  <title>教育支援用プラットフォーム</title>
+  <style>
+    body {
+      background-color: rgb(58, 166, 166);
+      text-align: center;
+      font-family: sans-serif;
+    }
 
-        h1 {
-            color: white;
-        }
+    h1 {
+      color: white;
+      font-size: 3rem;
+      margin-top: 50px;
+    }
 
-        a.btn-solid {
-            color: #fff;
-            border-top: 4px solid #48ecc4;
-            border-right: 4px solid #0a5f4a;
-            border-bottom: 4px solid #0f745b;
-            border-left: 4px solid #8cf9de;
-            border-radius: 0;
-            background: #11a37f;
-        }
-        
-        a.btn-solid:hover {
-            color: #fff;
-            border-top: 4px solid #0f745b;
-            border-right: 4px solid #8cf9de;
-            border-bottom: 4px solid #48ecc4;
-            border-left: 4px solid #0a5f4a;
-        }
-    </style>
+    .btn {
+      display: inline-block;
+      padding: 1rem 3rem;
+      font-size: 1.8rem;
+      font-weight: bold;
+      text-decoration: none;
+      margin-top: 30px;
+      border-radius: 8px;
+      transition: all 0.2s ease;
+    }
+
+    .btn-solid {
+      color: #fff;
+      border-top: 4px solid #48ecc4;
+      border-right: 4px solid #0a5f4a;
+      border-bottom: 4px solid #0f745b;
+      border-left: 4px solid #8cf9de;
+      background: #11a37f;
+    }
+
+    .btn-solid:hover {
+      color: #fff;
+      border-top: 4px solid #0f745b;
+      border-right: 4px solid #8cf9de;
+      border-bottom: 4px solid #48ecc4;
+      border-left: 4px solid #0a5f4a;
+      background: #0e8c6d;
+    }
+  </style>
 </head>
 <body>
-    <div class="main-theme">
-        <h1>メインプラットフォーム</h1>
-    </div>
-    <a href="" class="btn btn-solid">
-        <span>PUSH！</span>
-    </a>
+  <div class="main-theme">
+    <h1>メインプラットフォーム</h1>
+    <a href="#" class="btn btn-solid">PUSH！</a>
+  </div>
 </body>
 </html>
