--- a/anther faile/sample/main.html
+++ b/anther faile/sample/main.html
@@ -27,7 +27,7 @@
       transition: all 0.2s ease;
     }
 
-    .btn-solid {
+    .btn-youser {
       color: #fff;
       border-top: 4px solid #48ecc4;
       border-right: 4px solid #0a5f4a;
@@ -36,7 +36,7 @@
       background: #11a37f;
     }
 
-    .btn-solid:hover {
+    .btn-youser:hover {
       color: #fff;
       border-top: 4px solid #0f745b;
       border-right: 4px solid #8cf9de;
@@ -44,12 +44,54 @@
       border-left: 4px solid #0a5f4a;
       background: #0e8c6d;
     }
+
+    #whitebord {
+      display: none;
+      margin-top: 20px;
+    }
+
+    input {
+      padding: 10px;
+      font-size: 1.2rem;
+      width: 300px;
+    }
+
+    button {
+      padding: 10px 20px;
+      font-size: 1.2rem;
+      background-color: #fff100;
+      border: none;
+      cursor: pointer;
+      margin-left: 10px;
+    }
   </style>
 </head>
 <body>
   <div class="main-theme">
     <h1>メインプラットフォーム</h1>
-    <a href="#" class="btn btn-solid">PUSH！</a>
+    <a href="https://dondenden.github.io/sample-education-system/anther%20faile/sample/index" class="btn btn-youser">直接入室</a>
+    <a href="#" onclick="showfront()" class="btn btn-youser">ルームIDで入室</a>
   </div>
+
+  <div id="whitebord">
+    <input type="text" id="roomID" placeholder="roomIDを入力してください">
+    <button onclick="afterinput()">入室</button>
+  </div>
+
+  <script>
+    function showfront() {
+      document.getElementById("whitebord").style.display = "block";
+    }
+
+    function afterinput() {
+      const roomID = document.getElementById("roomID").value.trim();
+      if (roomID !== "") {
+        const newURL = `https://dondenden.github.io/sample-education-system/anther%20faile/sample/index?room=${encodeURIComponent(roomID)}`;
+        window.location.href = newURL;
+      } else {
+        alert("roomIDを入力してください。");
+      }
+    }
+  </script>
 </body>
 </html>
