--- a/anther faile/sample/index.html
+++ b/anther faile/sample/index.html
@@ -138,6 +138,7 @@
         if (key === "1") {
           camera.position.set(0, 1.5, 5);
           camera.lookAt(0, 1.5, 5);
+          console.log("他人が１を押しています");
         } else if (key === "2") {
           camera.position.set(0, 6.5, 5);
           camera.lookAt(0, 0, 0);
