--- a/anther faile/sample/MID.html
+++ b/anther faile/sample/MID.html
@@ -12,12 +12,12 @@
 
     if (!roomID) {
       alert("roomIDが見つかりません");
-      window.location.href = "main.html"; // 元のページへ戻すなど
+      window.location.href = "https://dondenden.github.io/sample-education-system/anther%20faile/sample/TOP"; // 元のページへ戻すなど
     }
 
     // 1秒後に index.html に遷移する（例：ローディング風）
     setTimeout(() => {
-      window.location.href = `index.html?room=${encodeURIComponent(roomID)}`;
+      window.location.href = `?room=${encodeURIComponent(roomID)}`;
     }, 1000);
   </script>
 </body>
