--- a/anther faile/sample/TOP.html
+++ b/anther faile/sample/TOP.html
@@ -86,7 +86,7 @@
     function afterinput() {
       const roomID = document.getElementById("roomID").value.trim();
       if (roomID !== "") {
-        const newURL = `?room=${encodeURIComponent(roomID)}`;//ココ
+        const newURL = `https://dondenden.github.io/sample-education-system/anther%20faile/sample/MID?room=${encodeURIComponent(roomID)}`;//ココ
         window.location.href = newURL;
       } else {
         alert("roomIDを入力してください。");
