--- a/anther faile/sample/MID.html
+++ b/anther faile/sample/MID.html
@@ -12,7 +12,7 @@
 
     if (!roomID) {
       alert("roomIDが見つかりません");
-      //window.location.href = "https://dondenden.github.io/sample-education-system/anther%20faile/sample/TOP"; // 元のページへ戻すなど
+      window.location.href = "https://dondenden.github.io/sample-education-system/anther%20faile/sample/TOP"; // 元のページへ戻すなど
     }
 
     // 1秒後に index.html に遷移する（例：ローディング風）
