--- a/anther faile/sample/MID.html
+++ b/anther faile/sample/MID.html
@@ -15,9 +15,9 @@
       window.location.href = "https://dondenden.github.io/sample-education-system/anther%20faile/sample/TOP"; // 元のページへ戻すなど
     }
 
-    // 1秒後に index.html に遷移する（例：ローディング風）
+    // 1秒後に BOT.html に遷移する（例：ローディング風）
     setTimeout(() => {
-      window.location.href = `?room=${encodeURIComponent(roomID)}`;
+      window.location.href = `https://dondenden.github.io/sample-education-system/anther%20faile/sample/BOT?room=${encodeURIComponent(roomID)}`;
     }, 1000);
   </script>
 </body>
