--- a/anther faile/sample/TOP.html
+++ b/anther faile/sample/TOP.html
@@ -69,7 +69,7 @@
 <body>
   <div class="main-theme">
     <h1>メインプラットフォーム</h1>
-    <a href="https://dondenden.github.io/sample-education-system/anther%20faile/sample/index" class="btn btn-youser">直接入室</a>
+    <a href="https://dondenden.github.io/sample-education-system/anther%20faile/sample/BOT" class="btn btn-youser">直接入室</a>
     <a href="#" onclick="showfront()" class="btn btn-youser">ルームIDで入室</a>
   </div>
 
