--- a/anther faile/sample/MID.html
+++ b/anther faile/sample/MID.html
@@ -16,9 +16,9 @@
     }
 
     // 1秒後に BOT.html に遷移する（例：ローディング風）
-    /*setTimeout(() => {
+    setTimeout(() => {
       window.location.href = `https://dondenden.github.io/sample-education-system/anther%20faile/sample/BOT?room=${encodeURIComponent(roomID)}`;
-    }, 1000);*/
+    }, 10000);
   </script>
 </body>
 </html>
